# envx

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: release.yml
completions/: _envx  _envx.ps1  envx.bash  envx.fish
src/: ast.rs  builtins.rs  cli.rs  dag.rs  error.rs  evaluator.rs  lexer.rs  lib.rs  loader.rs  main.rs  parser.rs  value.rs
