[package]
name = "envx"
version = "0.1.4"
edition = "2024"
description = "A modern dotenv replacement — dynamic variables, pipe transforms, conditionals, and file imports"
license = "MIT"
repository = "https://github.com/aronlo98/envx"
homepage = "https://github.com/aronlo98/envx"
readme = "README.md"
keywords = ["dotenv", "env", "environment", "config", "cli"]
categories = ["command-line-utilities", "config"]

[[bin]]
name = "envx"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Lexer via procedural macros (DFA-based, O(n))
logos = "0.14"

# DAG construction, cycle detection, topological sort
petgraph = "0.8"

# Human-friendly error reports with source spans
miette = { version = "7", features = ["fancy"] }

# derive(Error) for internal error types
thiserror = "2"

# IndexMap: HashMap that preserves insertion order (needed for ResolvedEnv)
indexmap = "2"

# Shell completion script generation
clap_complete = "4"

# Date and time formatting for now()
chrono = { version = "0.4", features = ["clock"] }

# Random value generation for secret()
rand = "0.9"

# UUID generation for uuid()
uuid = { version = "1", features = ["v4", "v7"] }



[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
